--- a/CraftsOnline.website/Pages/Index.cshtml
+++ b/CraftsOnline.website/Pages/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using CraftsOnline.website.Components //Supplies ProductList below
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
@@ -9,3 +10,6 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+@(await Html.RenderComponentAsync<ProductList>(RenderMode.ServerPrerendered))
+
+<script src="_framework/blazor.server.js"></script>
