--- a/CraftsOnline.website/Components/ProductList.razor
+++ b/CraftsOnline.website/Components/ProductList.razor
@@ -9,10 +9,7 @@
     @foreach (var product in ProductService.GetProducts())
     {
         <div class="card">
-            <div class="card-img" style="background-image:url('@product.Image'); 
-                        background-size: 33% auto;
-                        background-repeat: no-repeat;
-                        background-position: center; "></div>
+            <div class="card-img" style="background-image:url('@product.Image');"></div>
             <div class="card-body">
                 <h5 class="card-title">@product.Title</h5>
             </div>
@@ -29,6 +26,38 @@
     }
     
 </div>
+
+@if (selectProduct != null)
+{
+    <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            @if (selectProduct != null)
+            {
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="productTitle">@selectProduct.Title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="card">
+                            <div class="card-img" style="background-image: url('@selectProduct.Image');">
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">@selectProduct.Description</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+
+}
 
 @code {
     Product selectProduct;
